--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -44,6 +44,12 @@
       "branch": "master",
       "branch_mapping": {}
     },
+            {
+      "path_to_root": "enterprise/common",
+      "url": "https://github.com/MicrosoftDocs/OfficeDocs-pr.pt-br",
+      "branch": "live",
+      "branch_mapping": {}
+    },
     {
       "path_to_root": "_repo.en-us",
       "url": "https://github.com/MicrosoftDocs/OfficeDocs-Enterprise-pr",
