commit translated contents

--- a/Enterprise/cloud-adoption-and-hybrid-solutions.yml
+++ b/Enterprise/cloud-adoption-and-hybrid-solutions.yml
@@ -3,18 +3,18 @@ title: Documentação de soluções de nuvem corporativa
 summary: Solucionar problemas de negócios usando o Microsoft Cloud. Encontre informações sobre as mais recentes soluções de nuvem híbridas e de segurança, adoção em nuvem e muito mais.
 metadata:
   title: Documentação de soluções de nuvem corporativa | Microsoft docs
-  description: Solucione problemas de negócios usando o Microsoft Cloud. Encontre as informações mais recentes sobre soluções de nuvem híbridas e de segurança, adoção de nuvem e muito mais.
+  description: Solve business problems by using the Microsoft Cloud. Find information on the latest hybrid and security cloud solutions, cloud adoption, and more.
   ms.service: o365-solutions
   ms.topic: landing-page
   author: chenhao2020
   ms.author: v-chenha
   ms.date: 03/18/2020
-  ms.openlocfilehash: c5743dc8df8ba5487faf1e44609d766dcb49bac4
-  ms.sourcegitcommit: a578baeb0d8b85941c13afa268447d2592f89fae
+  ms.openlocfilehash: cb258d8a5cd695f4c1c90863cb8969d9be00801e
+  ms.sourcegitcommit: c112869b3ecc0f574b7054ee1edc8c57132f8237
   ms.translationtype: MT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 04/23/2020
-  ms.locfileid: "43794046"
+  ms.lasthandoff: 06/15/2020
+  ms.locfileid: "44735919"
 landingContent:
 - title: Soluções de nuvem empresarial
   linkLists:
@@ -28,5 +28,3 @@ landingContent:
       url: /office365/enterprise/cloud-adoption-test-lab-guides-tlgs
     - text: Soluções híbridas
       url: /office365/enterprise/hybrid-solutions
-    - text: Soluções de segurança
-      url: /office365/enterprise/security-solutions
