commit translated contents

--- a/Enterprise/cloud-adoption-and-hybrid-solutions.yml
+++ b/Enterprise/cloud-adoption-and-hybrid-solutions.yml
@@ -3,7 +3,7 @@ title: Documentação de soluções de nuvem corporativa
 summary: Solucionar problemas de negócios usando o Microsoft Cloud. Encontre informações sobre as mais recentes soluções de nuvem híbridas e de segurança, adoção em nuvem e muito mais.
 metadata:
   title: Documentação de soluções de nuvem corporativa | Microsoft docs
-  description: Solve business problems by using the Microsoft Cloud. Find information on the latest hybrid and security cloud solutions, cloud adoption, and more.
+  description: Solucione problemas de negócios usando o Microsoft Cloud. Encontre as informações mais recentes sobre soluções de nuvem híbridas e de segurança, adoção de nuvem e muito mais.
   ms.service: o365-solutions
   ms.topic: landing-page
   author: chenhao2020
